--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,10 +1,9 @@
-# pull official base image
 FROM python:3.8.1-alpine
 
 # set work directory
 WORKDIR /usr/src/app
 
-# set environment variables
+# Python won’t try to write .pyc or .pyo
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
