--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,7 @@
 asyncpg==0.20.0
 databases[postgresql]==0.2.6
 fastapi==0.46.0
+kafka-python==2.0.1
 PyJWT==1.7.1
 SQLAlchemy==1.3.12
 uvicorn==0.11.1
