--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
 
   app:
     build: ./src
-    command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    command: uvicorn app.main:app --workers 4 --host 0.0.0.0 --port 8000
     volumes:
       - ./src/:/usr/src/app/
       - ./data/:/data2import/
@@ -30,27 +30,19 @@ services:
 
   db:
     image: postgres:12.1-alpine
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=fuelsaveio
       # TODO hide secret
       - POSTGRES_PASSWORD=fuelsaveio
       - POSTGRES_DB=fuelsaveio
-    ports:
-      - 5432:5432
 
   zookeeper:
     image: 'bitnami/zookeeper:3'
-    ports:
-      - '2181:2181'
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
 
   kafka:
     image: 'bitnami/kafka:2'
-    ports:
-      - '9092:9092'
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
